// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product List Paging Component should render adequately for last page 1`] = `
<div
  id="root3"
  ng-version="6.1.6"
>
  
  
  <div
    class="product-list-paging"
  >
    
    <a
      href="/some/followup/link?page=2"
    >
      «
    </a>
    
    
    <a
      href="/some/followup/link?page=1"
      ng-reflect-ng-class="[object Object]"
    >
      1
    </a>
    
    <a
      href="/some/followup/link?page=2"
      ng-reflect-ng-class="[object Object]"
    >
      2
    </a>
    
    <a
      class="active"
      href="/some/followup/link?page=3"
      ng-reflect-ng-class="[object Object]"
    >
      3
    </a>
    
  </div>
</div>
`;

exports[`Product List Paging Component should render adequately for middle page 1`] = `
<div
  id="root2"
  ng-version="6.1.6"
>
  
  
  <div
    class="product-list-paging"
  >
    
    <a
      href="/some/followup/link?page=1"
    >
      «
    </a>
    
    
    <a
      href="/some/followup/link?page=1"
      ng-reflect-ng-class="[object Object]"
    >
      1
    </a>
    
    <a
      class="active"
      href="/some/followup/link?page=2"
      ng-reflect-ng-class="[object Object]"
    >
      2
    </a>
    
    <a
      href="/some/followup/link?page=3"
      ng-reflect-ng-class="[object Object]"
    >
      3
    </a>
    
    <a
      href="/some/followup/link?page=3"
    >
      »
    </a>
  </div>
</div>
`;

exports[`Product List Paging Component should render adequately for starting page 1`] = `
<div
  id="root1"
  ng-version="6.1.6"
>
  
  
  <div
    class="product-list-paging"
  >
    
    
    
    <a
      class="active"
      href="/some/followup/link?page=1"
      ng-reflect-ng-class="[object Object]"
    >
      1
    </a>
    
    <a
      href="/some/followup/link?page=2"
      ng-reflect-ng-class="[object Object]"
    >
      2
    </a>
    
    <a
      href="/some/followup/link?page=3"
      ng-reflect-ng-class="[object Object]"
    >
      3
    </a>
    
    <a
      href="/some/followup/link?page=2"
    >
      »
    </a>
  </div>
</div>
`;
